--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!------------------ khối: ảnh đại diện ------------------>
 	<div id="banner" style="padding: 10px">
 		<img  src="images/banner.jpg" alt="anhbbia" width="1400px">
-		<h1 class="name name_A">Nguyễn Văn A</h1>		
+		<h1 class="name name_A">Dương Hiển Phát</h1>		
 		<span class="name name_B">Full Stack Developer</span>
 	</div>
 
@@ -59,11 +59,11 @@
 				<h1 class="section-title">Thông tin cá nhân</h1>
 				<ul class="mt-40 info">
 					<li><span>Giới tính</span> : Nam</li>
-					<li><span>Ngày sinh</span> : 19/05/2000</li>
-					<li><span>Điện thoại</span> : (+84) 912398xxx</li>
-					<li><span>Email</span> : sinhvien@funix.edu.vn</li>
-					<li><span>Địa chỉ</span> : Số 10, đường 10, Hà Nội</li>
-					<li><span>Website</span> : https://abc.tech</li>
+					<li><span>Ngày sinh</span> : 19/05/1999</li>
+					<li><span>Điện thoại</span> : (+84) 909 999 999</li>
+					<li><span>Email</span> : phat.duonghien@funix.edu.vn</li>
+					<li><span>Địa chỉ</span> : Đồng Nai, Việt Nam</li>
+					<li><span>Website</span> : https://phatsgarden.com</li>
 				</ul>
 
 				<div class="canhan-icon">
@@ -86,15 +86,16 @@
 				</div>
 				<ul>
 					<li>
-						<h2 class="h2-grid">Full Stack Developer- Công ty X</h2>
-						<p>02/2022- Hiện tại
+						<h2 class="h2-grid">Full Stack Developer- Công ty VEDAN </h2>
+						<p> <i>02/2022-  </i> <i style="background-color: blue ; color: aliceblue; height: 18px; border-radius: 20%;">Hiện tại</i>  </p>
+						<p>
 						-Xây dựng, phát triển Website dựa trên thiết kế và yêu cầu đã có.
 						-Phân tích và thiết ké Database, sử dụng các hệ quản trị CSDL</p>
 					</li>
 					<li>
-						<h2 class="h2-grid">Web Designer - Công ty X</h2>
-						<p>06/2021-04/2022
-						- Thiết kế web dựa trên yêu cầu khách hàng.
+						<h2 class="h2-grid">Web Designer - Công ty AJINOMOTO</h2>
+						<p> <i>06/2021-04/2022 </i> </p>
+						<p>- Thiết kế web dựa trên yêu cầu khách hàng.
 						- Sử dụng các công cụ: Figma, Canva, PTS.</p>
 					</li>
 				</ul>
@@ -107,24 +108,24 @@
 				<ul>
 					<li>
 						<h2 class="h2-grid">FUNiX</h2>
-						<p>06/2021-05/2022</p>
+						<p> <i> 06/2021-05/2022 </i> </p>
 						<p>
 						- Tốt nghiệp chứng chỉ doanh nghiệp nhánh Fullstack. 
-						- GPA: 9 / 10</p>
+						- GPA: 10 / 10</p>
 					</li>
 					<li>
-						<h2 class="h2-grid">Cử nhân - ĐH FPT</h2>
-							<p>08/2016-07/2019</p>
+						<h2 class="h2-grid">Cử nhân - ĐH Bách Khoa</h2>
+							<p> <i>08/2016-07/2019 </i></p>
 							<p>
 							-Chuyên ngành: Kỹ thuật phần mềm. 
-							-GPA: 3.2 / 4></p>
+							-GPA: 4 / 4></p>
 					</li>
 					<li>
-					<h2 class="h2-grid">Đại học Hà Nội</h2>
-						<p>08/2016-07/2019</p>
+					<h2 class="h2-grid">ĐH Bách Khoa</h2>
+						<p> <i>08/2016-07/2019 </i></p>
 						<p>
-						-Hệ từ xa, Chuyên ngành: Ngôn ngữ Nhật 
-						-GPA: 2.8 / 4></p>
+						-Hệ từ xa, Chuyên ngành: Kỹ thuật điện
+						-GPA: 4 / 4></p>
 					</li>
 				</ul>
 			</div>
@@ -136,20 +137,20 @@
 				<ul>
 					<li>
 						<h2 class="h2-grid">FPT Edu Hackathon 2019</h2>
-						<p>03/2019-05/2019 
-						- Giải 3 bảng A
+						<p> <i> 03/2019-05/2019 </i> </p>
+						<p>- Giải 3 bảng A
 						- Đề tài: Trang web về phân loại rác thải.
 							</p>
 					</li>
 					<li>
 						<h2 class="h2-grid">Câu lạc bộ Z</h2>
-						<p>08/2018-08/2019
-							Trưởng ban chuyên môn</p>
+						<p> <i> 08/2018-08/2019 </i></p>
+						<p>Trưởng ban chuyên môn</p>
 					</li>
 					<li>
 						<h2 class="h2-grid">Câu lạc bộ Z</h2>
-						<p>08/2016
-						- Hỗ trợ tổ chức tuần lễ văn hóa Việt Nam - Nhật Bản</p>
+						<p> <i> 08/2016 </i></p>
+						<p>- Hỗ trợ tổ chức tuần lễ văn hóa Việt Nam - Nhật Bản</p>
 					</li>
 				</ul>
 			</div>
